ci(github): improved naming of aggregate jobs

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -214,8 +214,8 @@ jobs:
           "cucumber-8",
           "jasmine",
           "mocha",
-          "all-protractor",
-          "all-webdriverio"
+          "protractor-all",
+          "webdriverio-all"
         ]
       runs-on: 'ubuntu-latest'
       node-version: 16.x
