--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
     "compile:@documentation": "lerna run compile --stream --scope '@documentation/*'",
     "test": "lerna run test --stream --scope @serenity-js/*",
     "integration-test:all": "lerna run test --stream --concurrency 1 --scope @integration/*",
-    "integration-test:all-cucumber": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
-    "integration-test:all-playwright": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
-    "integration-test:all-protractor": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
-    "integration-test:all-webdriverio": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
+    "integration-test:cucumber-all": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
     "integration-test:cucumber-1": "lerna run test --stream --scope @integration/cucumber-1",
     "integration-test:cucumber-2": "lerna run test --stream --scope @integration/cucumber-2",
     "integration-test:cucumber-3": "lerna run test --stream --scope @integration/cucumber-3",
@@ -49,12 +46,15 @@
     "integration-test:cucumber-8": "lerna run test --stream --scope @integration/cucumber-8",
     "integration-test:jasmine": "lerna run test --stream --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --stream --concurrency 1 --scope @integration/mocha",
+    "integration-test:playwright-all": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
     "integration-test:playwright-test": "lerna run test --stream --scope @integration/playwright-test",
     "integration-test:playwright-web": "lerna run test --stream --scope @integration/playwright-web",
+    "integration-test:protractor-all": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
     "integration-test:protractor-cucumber": "lerna run test --stream --scope @integration/protractor-cucumber",
     "integration-test:protractor-jasmine": "lerna run test --stream --scope @integration/protractor-jasmine",
     "integration-test:protractor-mocha": "lerna run test --stream --scope @integration/protractor-mocha",
     "integration-test:protractor-web": "lerna run test --stream --scope @integration/protractor-web",
+    "integration-test:webdriverio-all": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
     "integration-test:webdriverio-cucumber": "lerna run test --stream --scope @integration/webdriverio-cucumber",
     "integration-test:webdriverio-jasmine": "lerna run test --stream --scope @integration/webdriverio-jasmine",
     "integration-test:webdriverio-mocha": "lerna run test --stream --scope @integration/webdriverio-mocha",
