--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -267,7 +267,7 @@ jobs:
           fetch-depth: 2
 
       - name: Download code coverage reports
-        uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741 # tag=v3
+        uses: actions/download-artifact@v3
         with:
           name: 'aggregated-code-coverage-report'
 
@@ -317,14 +317,14 @@ jobs:
           npm_token: ${{ secrets.NPM_TOKEN }}
 
       - name: Download compiled libs
-        uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741 # tag=v3
+        uses: actions/download-artifact@v3
         with:
           name: compiled-libs
       - name: Decompress Libs
         run: 7z x -aoa compiled-libs.zip
 
       - name: Setup Node
-        uses: actions/setup-node@969bd2663942d722d85b6a8626225850c2f7be4b # tag=v3
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x
 
@@ -385,7 +385,7 @@ jobs:
       - website-build
     steps:
       - name: Download website artifact
-        uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741 # tag=v3
+        uses: actions/download-artifact@v3
         with:
           name: website
       - name: Decompress website
