--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -16,12 +16,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.1.0",
-    "@docusaurus/plugin-client-redirects": "^2.1.0",
-    "@docusaurus/preset-classic": "2.1.0",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/plugin-client-redirects": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
+    "@giscus/react": "2.2.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
-    "docusaurus-plugin-typedoc-api": "^2.4.1",
+    "docusaurus-plugin-typedoc-api": "2.5.0",
     "mdx-mermaid": "^1.3.2",
     "mermaid": "8.11.5",
     "prism-react-renderer": "^1.3.5",
@@ -31,7 +32,7 @@
     "typedoc-plugin-mdn-links": "^2.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.1.0",
+    "@docusaurus/module-type-aliases": "2.2.0",
     "@tsconfig/docusaurus": "1.0.6",
     "typescript": "^4.8.4"
   },
