docs(website): applied ESLint suggestions

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -103,6 +103,8 @@ rules:
         conf: true
         createProp: true
         devtools: true
+        doc: true
+        Doc: true
         docString: true
         DocString: true
         e: true
@@ -116,5 +118,7 @@ rules:
         Prop: true
         Props: true
         props: true
+        TOC: true
+        toc: true
         temp: true
         wdio: true
