--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,7 +5,8 @@
     "packages/**/*.ts",
     "integration/**/*.ts",
     "examples/**/*.ts",
-    "documentation/**/*.ts"
+    "documentation/**/*.ts",
+    "documentation/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
