--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -17,14 +17,14 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
+    "@docusaurus/theme-mermaid": "2.2.0",
     "@docusaurus/plugin-client-redirects": "2.2.0",
+    "@docusaurus/plugin-ideal-image": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@giscus/react": "2.2.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "docusaurus-plugin-typedoc-api": "2.5.0",
-    "mdx-mermaid": "^1.3.2",
-    "mermaid": "8.11.5",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
