chore(renovate): corrected renovate config so that it doesn't ignore the examples directory
renovate base config includes default:ignoreModulesAndTests helper, which apart from node modules
and tests _also_ ignores the examples directory

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,21 @@
 {
   "extends": [
-    "config:base",
+    ":dependencyDashboard",
+    ":semanticPrefixFixDepsChoreOthers",
+    ":autodetectPinVersions",
+    ":prHourlyLimit2",
+    ":prConcurrentLimit20",
+    "group:monorepos",
+    "group:recommended",
+    "workarounds:typesNodeVersioning",
+    "workarounds:reduceRepologyServerLoad",
+    "helpers:disableTypesNodeMajor",
     "helpers:pinGitHubActionDigests"
   ],
   "rangeStrategy": "bump",
+  "ignorePaths": [
+    "**/node_modules/**"
+  ],
   "packageRules": [
     {
       "packagePatterns": ["^eslint$", "^eslint-plugin", "^@typescript-eslint"],
