style(eslint): applied suggestions from ESLint

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -57,6 +57,9 @@ rules:
   mocha/no-mocha-arrows: 'off'
   mocha/no-setup-in-describe: 'off'
   unicorn/empty-brace-spaces: 'off'
+  unicorn/switch-case-braces:
+    - error
+    - avoid
   unicorn/filename-case:
     - error
     - cases:
