feat(cucumber): support for Cucumber 8.9.0

--- a/nx.json
+++ b/nx.json
@@ -38,7 +38,44 @@
     },
     "test": {
       "outputs": [
-        "{projectRoot}/target"
+        "{projectRoot}/integration/playwright-web/target",
+        "{projectRoot}/integration/protractor-web/target",
+        "{projectRoot}/integration/webdriverio-web/target",
+        "{projectRoot}/target/coverage/assertions",
+        "{projectRoot}/target/coverage/console-reporter",
+        "{projectRoot}/target/coverage/core",
+        "{projectRoot}/target/coverage/cucumber",
+        "{projectRoot}/target/coverage/jasmine",
+        "{projectRoot}/target/coverage/local-server",
+        "{projectRoot}/target/coverage/mocha",
+        "{projectRoot}/target/coverage/playwright",
+        "{projectRoot}/target/coverage/playwright-test",
+        "{projectRoot}/target/coverage/protractor",
+        "{projectRoot}/target/coverage/rest",
+        "{projectRoot}/target/coverage/serenity-bdd",
+        "{projectRoot}/target/coverage/web",
+        "{projectRoot}/target/coverage/webdriverio",
+        "{projectRoot}/target/coverage/integration-cucumber-1",
+        "{projectRoot}/target/coverage/integration-cucumber-2",
+        "{projectRoot}/target/coverage/integration-cucumber-3",
+        "{projectRoot}/target/coverage/integration-cucumber-4",
+        "{projectRoot}/target/coverage/integration-cucumber-5",
+        "{projectRoot}/target/coverage/integration-cucumber-6",
+        "{projectRoot}/target/coverage/integration-cucumber-7",
+        "{projectRoot}/target/coverage/integration-cucumber-8-legacy-api",
+        "{projectRoot}/target/coverage/integration-cucumber-8-javascript-api",
+        "{projectRoot}/target/coverage/integration-jasmine",
+        "{projectRoot}/target/coverage/integration-mocha",
+        "{projectRoot}/target/coverage/integration-playwright-web",
+        "{projectRoot}/target/coverage/integration-playwright-test",
+        "{projectRoot}/target/coverage/integration-protractor-cucumber",
+        "{projectRoot}/target/coverage/integration-protractor-jasmine",
+        "{projectRoot}/target/coverage/integration-protractor-mocha",
+        "{projectRoot}/target/coverage/integration-protractor-web",
+        "{projectRoot}/target/coverage/integration-webdriverio-cucumber",
+        "{projectRoot}/target/coverage/integration-webdriverio-jasmine",
+        "{projectRoot}/target/coverage/integration-webdriverio-mocha",
+        "{projectRoot}/target/coverage/integration-webdriverio-web"
       ]
     }
   }
