--- a/integration/cucumber-8-javascript-api/package.json
+++ b/integration/cucumber-8-javascript-api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@integration/protractor-cucumber",
+  "name": "@integration/cucumber-8-javascript-api",
   "version": "3.0.0",
-  "description": "Protractor/Cucumber integration tests",
+  "description": "Specs verifying integration between Serenity/JS and Cucumber.js",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf lib",
-    "test": "nyc mocha --config ../../.mocharc.yml --timeout 60000 'spec/**/*.spec.*'"
+    "test": "nyc mocha --parallel --config .mocharc.yml"
   },
   "repository": {
     "type": "git",
@@ -28,18 +28,14 @@
     "node": "^14 || ^16 || ^18",
     "npm": "^6 || ^7 || ^8"
   },
-  "dependencies": {
+  "devDependencies": {
     "@cucumber/cucumber": "^8.9.0",
     "@integration/testing-tools": "3.0.0",
+    "@integration/cucumber-specs": "3.0.0",
     "@serenity-js/core": "^3.0.0-rc",
     "@serenity-js/cucumber": "^3.0.0-rc",
-    "@serenity-js/protractor": "^3.0.0-rc",
-    "@serenity-js/web": "^3.0.0-rc",
-    "protractor": "^7.0.0"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
+    "@types/chai": "^4.3.4",
     "mocha": "^10.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
