--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "integration-test:cucumber-5": "lerna run test --stream --scope @integration/cucumber-5",
     "integration-test:cucumber-6": "lerna run test --stream --scope @integration/cucumber-6",
     "integration-test:cucumber-7": "lerna run test --stream --scope @integration/cucumber-7",
-    "integration-test:cucumber-8": "lerna run test --stream --scope @integration/cucumber-8",
+    "integration-test:cucumber-8": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-8-*",
     "integration-test:jasmine": "lerna run test --stream --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --stream --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
