chore(lerna): leveraged nx.js caching for compile and test tasks
so that we don't have to rebuild modules that haven't changed whenever a contributor runs "make
compile"

--- a/examples/calculator-app/package.json
+++ b/examples/calculator-app/package.json
@@ -16,9 +16,9 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "clean": "rimraf lib target",
+    "clean": "rimraf target",
     "test": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
-    "compile": "tsc --project tsconfig.json",
+    "compile": "rimraf lib && tsc --project tsconfig.json",
     "verify": "npm test",
     "start": "node index.js",
     "dev": "nodemon --exec 'cross-env PORT=3000 NODE_ENV=TEST npm start'"
