--- a/integration/cucumber-specs/package.json
+++ b/integration/cucumber-specs/package.json
@@ -16,8 +16,7 @@
     "access": "private"
   },
   "scripts": {
-    "clean": "rimraf lib",
-    "compile": "tsc --project tsconfig.json"
+    "compile": "rimraf lib && tsc --project tsconfig.json"
   },
   "repository": {
     "type": "git",
