--- a/package.json
+++ b/package.json
@@ -24,41 +24,41 @@
     "testing"
   ],
   "scripts": {
-    "clean": "rimraf target && lerna run clean --parallel",
+    "clean": "lerna run clean && rimraf target",
     "lint": "eslint --ext ts --config .eslintrc.yml .",
     "lint:fix": "eslint --ext ts --config .eslintrc.yml --fix .",
-    "compile:all": "lerna run compile --stream",
-    "compile:libs": "lerna run compile --stream --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs'",
-    "compile:@serenity-js": "lerna run compile --stream --scope '@serenity-js/*'",
-    "compile:@integration": "lerna run compile --stream --scope '@integration/*'",
-    "compile:@examples": "lerna run compile --stream --scope '@examples/*'",
-    "compile:@documentation": "lerna run compile --stream --scope '@documentation/*'",
-    "test": "lerna run test --stream --scope @serenity-js/*",
-    "integration-test:all": "lerna run test --stream --concurrency 1 --scope @integration/*",
-    "integration-test:cucumber-all": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
-    "integration-test:cucumber-1": "lerna run test --stream --scope @integration/cucumber-1",
-    "integration-test:cucumber-2": "lerna run test --stream --scope @integration/cucumber-2",
-    "integration-test:cucumber-3": "lerna run test --stream --scope @integration/cucumber-3",
-    "integration-test:cucumber-4": "lerna run test --stream --scope @integration/cucumber-4",
-    "integration-test:cucumber-5": "lerna run test --stream --scope @integration/cucumber-5",
-    "integration-test:cucumber-6": "lerna run test --stream --scope @integration/cucumber-6",
-    "integration-test:cucumber-7": "lerna run test --stream --scope @integration/cucumber-7",
-    "integration-test:cucumber-8": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-8-*",
-    "integration-test:jasmine": "lerna run test --stream --concurrency 1 --scope @integration/jasmine",
-    "integration-test:mocha": "lerna run test --stream --concurrency 1 --scope @integration/mocha",
-    "integration-test:playwright-all": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
-    "integration-test:playwright-test": "lerna run test --stream --scope @integration/playwright-test",
-    "integration-test:playwright-web": "lerna run test --stream --scope @integration/playwright-web",
-    "integration-test:protractor-all": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
-    "integration-test:protractor-cucumber": "lerna run test --stream --scope @integration/protractor-cucumber",
-    "integration-test:protractor-jasmine": "lerna run test --stream --scope @integration/protractor-jasmine",
-    "integration-test:protractor-mocha": "lerna run test --stream --scope @integration/protractor-mocha",
-    "integration-test:protractor-web": "lerna run test --stream --scope @integration/protractor-web",
-    "integration-test:webdriverio-all": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
-    "integration-test:webdriverio-cucumber": "lerna run test --stream --scope @integration/webdriverio-cucumber",
-    "integration-test:webdriverio-jasmine": "lerna run test --stream --scope @integration/webdriverio-jasmine",
-    "integration-test:webdriverio-mocha": "lerna run test --stream --scope @integration/webdriverio-mocha",
-    "integration-test:webdriverio-web": "lerna run test --stream --scope @integration/webdriverio-web",
+    "compile:all": "lerna run compile",
+    "compile:libs": "lerna run compile --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs'",
+    "compile:@serenity-js": "lerna run compile --scope '@serenity-js/*'",
+    "compile:@integration": "lerna run compile --scope '@integration/*'",
+    "compile:@examples": "lerna run compile --scope '@examples/*'",
+    "compile:@documentation": "lerna run compile --scope '@documentation/*'",
+    "test": "lerna run test --scope @serenity-js/*",
+    "integration-test:all": "lerna run test --concurrency 1 --scope @integration/*",
+    "integration-test:cucumber-all": "lerna run test --concurrency 1 --scope @integration/cucumber-*",
+    "integration-test:cucumber-1": "lerna run test --scope @integration/cucumber-1",
+    "integration-test:cucumber-2": "lerna run test --scope @integration/cucumber-2",
+    "integration-test:cucumber-3": "lerna run test --scope @integration/cucumber-3",
+    "integration-test:cucumber-4": "lerna run test --scope @integration/cucumber-4",
+    "integration-test:cucumber-5": "lerna run test --scope @integration/cucumber-5",
+    "integration-test:cucumber-6": "lerna run test --scope @integration/cucumber-6",
+    "integration-test:cucumber-7": "lerna run test --scope @integration/cucumber-7",
+    "integration-test:cucumber-8": "lerna run test --concurrency 1 --scope @integration/cucumber-8-*",
+    "integration-test:jasmine": "lerna run test --concurrency 1 --scope @integration/jasmine",
+    "integration-test:mocha": "lerna run test --concurrency 1 --scope @integration/mocha",
+    "integration-test:playwright-all": "lerna run test --concurrency 1 --scope @integration/playwright-*",
+    "integration-test:playwright-test": "lerna run test --scope @integration/playwright-test",
+    "integration-test:playwright-web": "lerna run test --scope @integration/playwright-web",
+    "integration-test:protractor-all": "lerna run test --concurrency 1 --scope @integration/protractor-*",
+    "integration-test:protractor-cucumber": "lerna run test --scope @integration/protractor-cucumber",
+    "integration-test:protractor-jasmine": "lerna run test --scope @integration/protractor-jasmine",
+    "integration-test:protractor-mocha": "lerna run test --scope @integration/protractor-mocha",
+    "integration-test:protractor-web": "lerna run test --scope @integration/protractor-web",
+    "integration-test:webdriverio-all": "lerna run test --concurrency 1 --scope @integration/webdriverio-*",
+    "integration-test:webdriverio-cucumber": "lerna run test --scope @integration/webdriverio-cucumber",
+    "integration-test:webdriverio-jasmine": "lerna run test --scope @integration/webdriverio-jasmine",
+    "integration-test:webdriverio-mocha": "lerna run test --scope @integration/webdriverio-mocha",
+    "integration-test:webdriverio-web": "lerna run test --scope @integration/webdriverio-web",
     "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
     "coverage:merge": "bin/istanbul-merge.ts",
