--- a/packages/console-reporter/package.json
+++ b/packages/console-reporter/package.json
@@ -25,9 +25,9 @@
     "testing"
   ],
   "scripts": {
-    "clean": "rimraf .nyc_output lib target",
+    "clean": "rimraf '../../target/coverage/console-reporter'",
     "test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
-    "compile": "tsc --project tsconfig.build.json"
+    "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
     "type": "git",
