--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -26,9 +26,9 @@
     "testing"
   ],
   "scripts": {
-    "clean": "rimraf .nyc_output lib target",
+    "clean": "rimraf '../../target/coverage/playwright'",
     "~test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
-    "compile": "tsc --project tsconfig.build.json"
+    "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
     "type": "git",
