--- a/integration/cucumber-8-javascript-api/package.json
+++ b/integration/cucumber-8-javascript-api/package.json
@@ -14,7 +14,7 @@
     "access": "private"
   },
   "scripts": {
-    "clean": "rimraf lib",
+    "clean": "rimraf ../../target/coverage/integration-cucumber-8-javascript-api",
     "test": "nyc mocha --parallel --config .mocharc.yml"
   },
   "repository": {
