--- a/integration/jasmine/package.json
+++ b/integration/jasmine/package.json
@@ -14,7 +14,7 @@
     "access": "private"
   },
   "scripts": {
-    "clean": "rimraf lib",
+    "clean": "rimraf ../../target/coverage/integration-jasmine",
     "test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'"
   },
   "repository": {
