--- a/integration/mocha/package.json
+++ b/integration/mocha/package.json
@@ -14,7 +14,7 @@
     "access": "private"
   },
   "scripts": {
-    "clean": "rimraf lib",
+    "clean": "rimraf ../../target/coverage/integration-mocha",
     "test": "nyc mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'"
   },
   "repository": {
