--- a/integration/protractor-mocha/package.json
+++ b/integration/protractor-mocha/package.json
@@ -14,7 +14,7 @@
     "access": "private"
   },
   "scripts": {
-    "clean": "rimraf lib",
+    "clean": "rimraf ../../target/coverage/integration-protractor-mocha",
     "test": "nyc mocha --config ../../.mocharc.yml --timeout 60000 'spec/**/*.spec.*'"
   },
   "repository": {
