--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -30,9 +30,9 @@
     "wdio-reporter"
   ],
   "scripts": {
-    "clean": "rimraf .nyc_output lib target",
+    "clean": "rimraf '../../target/coverage/webdriverio'",
     "test": "nyc mocha --config ../../.mocharc.yml 'spec/adapter/**/*.spec.*'",
-    "compile": "tsc --project tsconfig.build.json"
+    "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
     "type": "git",
