chore(lerna): ensure nx uses compilation cache before running tests, if available

--- a/nx.json
+++ b/nx.json
@@ -37,6 +37,9 @@
       ]
     },
     "test": {
+      "dependsOn": [
+        "compile"
+      ],
       "outputs": [
         "{projectRoot}/integration/playwright-web/target",
         "{projectRoot}/integration/protractor-web/target",
