--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "testing"
   ],
   "scripts": {
-    "clean": "rimraf target && lerna run clean --parallel",
+    "clean": "rimraf target && lerna run clean",
     "lint": "eslint --ext ts --config .eslintrc.yml .",
     "lint:fix": "eslint --ext ts --config .eslintrc.yml --fix .",
     "compile:all": "lerna run compile --stream",
@@ -34,16 +34,8 @@
     "compile:@examples": "lerna run compile --stream --scope '@examples/*'",
     "compile:@documentation": "lerna run compile --stream --scope '@documentation/*'",
     "test": "lerna run test --stream --scope @serenity-js/*",
-    "integration-test:all": "lerna run test --stream --concurrency 1 --scope @integration/*",
-    "integration-test:cucumber-all": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
-    "integration-test:cucumber-1": "lerna run test --stream --scope @integration/cucumber-1",
-    "integration-test:cucumber-2": "lerna run test --stream --scope @integration/cucumber-2",
-    "integration-test:cucumber-3": "lerna run test --stream --scope @integration/cucumber-3",
-    "integration-test:cucumber-4": "lerna run test --stream --scope @integration/cucumber-4",
-    "integration-test:cucumber-5": "lerna run test --stream --scope @integration/cucumber-5",
-    "integration-test:cucumber-6": "lerna run test --stream --scope @integration/cucumber-6",
-    "integration-test:cucumber-7": "lerna run test --stream --scope @integration/cucumber-7",
-    "integration-test:cucumber-8": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-8-*",
+    "integration-test:all": "lerna run test --stream --scope @integration/*",
+    "integration-test:cucumber-all": "lerna run test --scope @integration/cucumber-*",
     "integration-test:jasmine": "lerna run test --stream --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --stream --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
@@ -59,6 +51,8 @@
     "integration-test:webdriverio-jasmine": "lerna run test --stream --scope @integration/webdriverio-jasmine",
     "integration-test:webdriverio-mocha": "lerna run test --stream --scope @integration/webdriverio-mocha",
     "integration-test:webdriverio-web": "lerna run test --stream --scope @integration/webdriverio-web",
+    "integration-test:webdriverio-web:puppeteer": "lerna run test:puppeteer --stream --scope @integration/webdriverio-web",
+    "integration-test:webdriverio-web:selenium-standalone": "lerna run test:selenium-standalone --stream --scope @integration/webdriverio-web",
     "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
     "coverage:merge": "bin/istanbul-merge.ts",
