ci(github): optimised the number of workers used on CI and corrected artifact names

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -187,8 +187,8 @@ jobs:
           "webdriverio-cucumber",
           "webdriverio-jasmine",
           "webdriverio-mocha",
-          "webdriverio-web:puppeteer",
-          "webdriverio-web:selenium-standalone",
+          "webdriverio-web-puppeteer",
+          "webdriverio-web-selenium-standalone",
         ]
       runs-on: 'ubuntu-latest'
       node-version: 16.x
