ci(github): reduced the amount of time it takes to run Cucumber integration tests in the pipeline

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -177,7 +177,14 @@ jobs:
     with:
       modules: |
         [
-          "cucumber-all",
+          "cucumber-1",
+          "cucumber-2",
+          "cucumber-3",
+          "cucumber-4",
+          "cucumber-5",
+          "cucumber-6",
+          "cucumber-7",
+          "cucumber-8",
           "jasmine",
           "mocha",
           "protractor-cucumber",
