--- a/package.json
+++ b/package.json
@@ -35,7 +35,15 @@
     "compile:@documentation": "lerna run compile --stream --scope '@documentation/*'",
     "test": "lerna run test --stream --scope @serenity-js/*",
     "integration-test:all": "lerna run test --stream --scope @integration/*",
-    "integration-test:cucumber-all": "lerna run test --scope @integration/cucumber-*",
+    "integration-test:cucumber-all": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-*",
+    "integration-test:cucumber-1": "lerna run test --stream --scope @integration/cucumber-1",
+    "integration-test:cucumber-2": "lerna run test --stream --scope @integration/cucumber-2",
+    "integration-test:cucumber-3": "lerna run test --stream --scope @integration/cucumber-3",
+    "integration-test:cucumber-4": "lerna run test --stream --scope @integration/cucumber-4",
+    "integration-test:cucumber-5": "lerna run test --stream --scope @integration/cucumber-5",
+    "integration-test:cucumber-6": "lerna run test --stream --scope @integration/cucumber-6",
+    "integration-test:cucumber-7": "lerna run test --stream --scope @integration/cucumber-7",
+    "integration-test:cucumber-8": "lerna run test --stream --concurrency 1 --scope @integration/cucumber-8-*",
     "integration-test:jasmine": "lerna run test --stream --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --stream --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --stream --concurrency 1 --scope @integration/playwright-*",
