--- a/integration/cucumber-6/package.json
+++ b/integration/cucumber-6/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf lib",
-    "test": "nyc mocha --config .mocharc.yml"
+    "test": "nyc mocha --parallel --config .mocharc.yml"
   },
   "repository": {
     "type": "git",
