ci(github): re-organised parallel jobs to better utilise the pipeline

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -187,13 +187,9 @@ jobs:
           "cucumber-8",
           "jasmine",
           "mocha",
-          "protractor-cucumber",
-          "protractor-jasmine",
-          "protractor-mocha",
+          "protractor-test-runners",
           "protractor-web",
-          "webdriverio-cucumber",
-          "webdriverio-jasmine",
-          "webdriverio-mocha",
+          "webdriverio-test-runners",
           "webdriverio-web-puppeteer",
           "webdriverio-web-selenium-standalone",
         ]
