--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "integration-test:playwright-test": "lerna run test --stream --scope @integration/playwright-test",
     "integration-test:playwright-web": "lerna run test --stream --scope @integration/playwright-web",
     "integration-test:protractor-all": "lerna run test --stream --concurrency 1 --scope @integration/protractor-*",
+    "integration-test:protractor-test-runners": "lerna run test --stream --concurrency 1 --scope @integration/protractor-cucumber --scope @integration/protractor-jasmine --scope @integration/protractor-mocha",
     "integration-test:protractor-cucumber": "lerna run test --stream --scope @integration/protractor-cucumber",
     "integration-test:protractor-jasmine": "lerna run test --stream --scope @integration/protractor-jasmine",
     "integration-test:protractor-mocha": "lerna run test --stream --scope @integration/protractor-mocha",
     "integration-test:protractor-web": "lerna run test --stream --scope @integration/protractor-web",
     "integration-test:webdriverio-all": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-*",
+    "integration-test:webdriverio-test-runners": "lerna run test --stream --concurrency 1 --scope @integration/webdriverio-cucumber --scope @integration/webdriverio-jamine --scope @integration/webdriverio-mocha",
     "integration-test:webdriverio-cucumber": "lerna run test --stream --scope @integration/webdriverio-cucumber",
     "integration-test:webdriverio-jasmine": "lerna run test --stream --scope @integration/webdriverio-jasmine",
     "integration-test:webdriverio-mocha": "lerna run test --stream --scope @integration/webdriverio-mocha",
