--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -19,13 +19,13 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test:puppeteer": "cross-env INTEGRATION=puppeteer npm test",
-    "test:selenium-standalone": "cross-env INTEGRATION=selenium-standalone npm test",
+    "test:devtools": "cross-env PROTOCOL=devtools npm test",
+    "test:webdriver": "cross-env PROTOCOL=webdriver npm test",
     "pretest": "serenity-bdd update --ignoreSSL",
     "test": "cross-env PORT=8080 failsafe clean test:acceptance test:report",
     "test:acceptance": "start-server-and-test start 'http://localhost:8080' test:acceptance:run",
     "start": "npx web-specs-start",
-    "test:acceptance:run": "cross-env-shell nyc --report-dir='../target/coverage/integration-webdriverio-web-$INTEGRATION' wdio wdio.conf.ts",
+    "test:acceptance:run": "cross-env-shell nyc --report-dir='../target/coverage/integration-webdriverio-web-$PROTOCOL' wdio wdio.conf.ts",
     "test:report": "serenity-bdd run"
   },
   "repository": {
@@ -51,13 +51,13 @@
     "@types/mocha": "^10.0.0",
     "@wdio/cli": "^7.27.0",
     "@wdio/local-runner": "^7.27.0",
-    "@wdio/selenium-standalone-service": "^7.26.0",
     "@wdio/spec-reporter": "^7.26.0",
     "chromedriver": "^108.0.0",
     "ci-info": "^3.7.0",
     "cross-env": "^7.0.3",
     "mocha": "^10.1.0",
     "npm-failsafe": "^0.4.3",
+    "wdio-chromedriver-service": "7.3.2",
     "webdriverio": "^7.27.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
