--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "integration-test:webdriverio-jasmine": "lerna run test --stream --scope @integration/webdriverio-jasmine",
     "integration-test:webdriverio-mocha": "lerna run test --stream --scope @integration/webdriverio-mocha",
     "integration-test:webdriverio-web": "lerna run test --stream --scope @integration/webdriverio-web",
-    "integration-test:webdriverio-web-puppeteer": "lerna run test:puppeteer --stream --scope @integration/webdriverio-web",
-    "integration-test:webdriverio-web-selenium-standalone": "lerna run test:selenium-standalone --stream --scope @integration/webdriverio-web",
+    "integration-test:webdriverio-web-devtools": "lerna run test:devtools --stream --scope @integration/webdriverio-web",
+    "integration-test:webdriverio-web-webdriver": "lerna run test:webdriver --stream --scope @integration/webdriverio-web",
     "site": "lerna run site --stream --scope '@documentation/*'",
     "report": "npm run coverage:merge && npm run coverage:report",
     "coverage:merge": "bin/istanbul-merge.ts",
