--- a/lerna.json
+++ b/lerna.json
@@ -17,6 +17,9 @@
     "express",
     "jasmine",
     "mocha",
+    "playwright",
+    "playwright-core",
+    "@playwright/test",
     "protractor",
     "selenium-webdriver",
     "webdriverio"
