ci(lerna): don't hoist playwright packages
to avoid build errors when renovate accidentally picks up a newer version of playwright-core

--- a/lerna.json
+++ b/lerna.json
@@ -11,12 +11,15 @@
     "@cucumber/create-meta",
     "@cucumber/cucumber",
     "@cucumber/messages",
+    "@playwright/*",
     "@wdio/*",
     "cucumber",
     "colors",
     "express",
     "jasmine",
     "mocha",
+    "playwright",
+    "playwright-core",
     "protractor",
     "selenium-webdriver",
     "webdriverio"
